# cerememory

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  cerememory.example.toml  deny.toml  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml  deep-ci.yml  release-crates.yml  release-github.yml  release-npm.yml  release-python.yml
adapters/adapter-claude/: Cargo.toml
adapters/adapter-claude/src/: lib.rs  provider.rs
adapters/adapter-common/: Cargo.toml
adapters/adapter-common/src/: lib.rs
adapters/adapter-gemini/: Cargo.toml
adapters/adapter-gemini/src/: lib.rs  provider.rs
adapters/adapter-openai/: Cargo.toml
adapters/adapter-openai/src/: lib.rs  provider.rs
benches/: README.md
bindings/python/: README.md  pyproject.toml
bindings/python-native/: Cargo.toml  pyproject.toml
bindings/python-native/python/cerememory_native/: __init__.py  __init__.pyi
bindings/python-native/src/: engine.rs  lib.rs  types.rs
bindings/python/src/cerememory/: __init__.py  _async_client.py  _endpoints.py  _sync_client.py  _transport.py  client.py  errors.py  types.py
bindings/python/src/cerememory/integrations/: __init__.py  langchain.py  llamaindex.py
bindings/python/tests/: conftest.py  test_async_client.py  test_client.py  test_e2e.py  test_integrations.py  test_types.py
bindings/typescript/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
bindings/typescript-native/: Cargo.toml  package.json
bindings/typescript-native/src/: engine.rs  lib.rs  types.rs
bindings/typescript/src/: client.ts  errors.ts  index.ts  transport.ts  types.ts
bindings/typescript/src/integrations/: ai-sdk.ts  index.ts
bindings/typescript/tests/: client.test.ts  e2e.test.ts  integrations.test.ts
crates/cerememory-archive/: Cargo.toml
crates/cerememory-archive/benches/: archive_bench.rs
crates/cerememory-archive/src/: crypto.rs  exporter.rs  format.rs  importer.rs  lib.rs
crates/cerememory-association/: Cargo.toml
crates/cerememory-association/benches/: activation_bench.rs
crates/cerememory-association/src/: lib.rs
crates/cerememory-cli/: Cargo.toml
crates/cerememory-cli/src/: main.rs
crates/cerememory-cli/tests/: mcp_stdio.rs
crates/cerememory-config/: Cargo.toml
crates/cerememory-config/src/: lib.rs
crates/cerememory-core/: Cargo.toml
crates/cerememory-core/benches/: serialization_bench.rs
crates/cerememory-core/src/: auth.rs  encryption.rs  error.rs  lib.rs  media.rs  protocol.rs  traits.rs  types.rs
crates/cerememory-decay/: Cargo.toml
crates/cerememory-decay/benches/: decay_bench.rs
crates/cerememory-decay/src/: lib.rs  math.rs
crates/cerememory-engine/: Cargo.toml
crates/cerememory-engine/benches/: engine_bench.rs
crates/cerememory-engine/src/: audit.rs  lib.rs
crates/cerememory-evolution/: Cargo.toml
crates/cerememory-evolution/src/: lib.rs
crates/cerememory-index/: Cargo.toml
crates/cerememory-index/benches/: search_bench.rs
crates/cerememory-index/src/: hnsw_index.rs  lib.rs  structured_index.rs  text_index.rs  vector_index.rs
crates/cerememory-recorder/: Cargo.toml
crates/cerememory-recorder/src/: capture.rs  client.rs  config.rs  doctor.rs  error.rs  hook.rs  ingest.rs  lib.rs  main.rs  redact.rs  spool.rs
crates/cerememory-recorder/tests/: http.rs
crates/cerememory-store-common/: Cargo.toml
crates/cerememory-store-common/src/: lib.rs
crates/cerememory-store-emotional/: Cargo.toml
crates/cerememory-store-emotional/src/: lib.rs
crates/cerememory-store-episodic/: Cargo.toml
crates/cerememory-store-episodic/src/: lib.rs
crates/cerememory-store-procedural/: Cargo.toml
crates/cerememory-store-procedural/src/: lib.rs
crates/cerememory-store-raw/: Cargo.toml
crates/cerememory-store-raw/src/: lib.rs
crates/cerememory-store-semantic/: Cargo.toml
crates/cerememory-store-semantic/src/: lib.rs
crates/cerememory-store-working/: Cargo.toml
crates/cerememory-store-working/src/: lib.rs
crates/cerememory-transport-grpc/: Cargo.toml  build.rs
crates/cerememory-transport-grpc/proto/: cerememory.proto
crates/cerememory-transport-grpc/src/: auth.rs  lib.rs  service.rs
crates/cerememory-transport-http/: Cargo.toml
crates/cerememory-transport-http/src/: auth.rs  lib.rs  metrics.rs  rate_limit.rs
crates/cerememory-transport-mcp/: Cargo.toml
crates/cerememory-transport-mcp/src/: lib.rs
docs/: human-plus-memory-phase1.md  mcp-agent-metadata.md  migration-0.2.0.md  recorder.md  release.md
docs/adr/: 009-secure-at-rest.md  010-tamper-evident-audit-log.md  README.md
scripts/: release-check.sh  test-rust-cool.sh  test-rust-workspace-cool.sh
tasks/: todo.md
tests/fixtures/: README.md
tests/integration/: Cargo.toml  README.md  helpers.rs  llm_e2e.rs  phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs
