[workspace]
resolver = "2"
members = [
    "crates/cerememory-core",
    "crates/cerememory-config",
    "crates/cerememory-store-common",
    "crates/cerememory-store-raw",
    "crates/cerememory-store-episodic",
    "crates/cerememory-store-semantic",
    "crates/cerememory-store-procedural",
    "crates/cerememory-store-emotional",
    "crates/cerememory-store-working",
    "crates/cerememory-decay",
    "crates/cerememory-association",
    "crates/cerememory-evolution",
    "crates/cerememory-index",
    "crates/cerememory-engine",
    "crates/cerememory-transport-http",
    "crates/cerememory-transport-grpc",
    "crates/cerememory-transport-mcp",
    "crates/cerememory-archive",
    "crates/cerememory-cli",
    "crates/cerememory-recorder",
    "adapters/adapter-common",
    "adapters/adapter-claude",
    "adapters/adapter-openai",
    "adapters/adapter-gemini",
    "tests/integration",
]

[workspace.package]
version = "0.2.7"
edition = "2021"
authors = ["Masato Okuwaki <masato@co-r-e.com>"]
license = "MIT"
repository = "https://github.com/co-r-e/cerememory"
homepage = "https://github.com/co-r-e/cerememory"
description = "A living memory database for the age of AI"
rust-version = "1.95"

[workspace.dependencies]
# Core
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
thiserror = "2"
anyhow = "1"
regex = "1"

# Async
tokio = { version = "1", features = ["full"] }
rayon = "1"
async-trait = "0.1"
futures = "0.3"

# Storage
redb = "4"
tantivy = "0.26"

# Networking
axum = "0.8"
tonic = { version = "0.14", features = ["tls-ring"] }
prost = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Numeric
ordered-float = "5"

# MCP (Model Context Protocol)
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "1"

# Crypto
sha2 = "0.11"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.10"
zeroize = { version = "1", features = ["derive"] }

# CLI
clap = { version = "4", features = ["derive"] }
rpassword = "7"

# Config
figment = { version = "0.10", features = ["toml", "env"] }
secrecy = { version = "0.10", features = ["serde"] }

# HTTP middleware
tower-http = { version = "0.6", features = ["auth", "cors", "trace", "request-id", "util"] }
subtle = "2"
governor = "0.10"

# LLM HTTP client
reqwest = { version = "0.13", features = ["json", "multipart"] }
base64 = "0.22"

# Health & shutdown
tonic-health = "0.14"
tokio-util = { version = "0.7", features = ["rt"] }

# Synchronization
parking_lot = "0.12"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Testing
tempfile = "3"
criterion = "0.8"
wiremock = "0.6"

# Internal crates
cerememory-core = { version = "0.2.6", path = "crates/cerememory-core" }
cerememory-store-common = { version = "0.2.6", path = "crates/cerememory-store-common" }
cerememory-store-raw = { version = "0.2.6", path = "crates/cerememory-store-raw" }
cerememory-store-episodic = { version = "0.2.6", path = "crates/cerememory-store-episodic" }
cerememory-store-semantic = { version = "0.2.6", path = "crates/cerememory-store-semantic" }
cerememory-store-procedural = { version = "0.2.6", path = "crates/cerememory-store-procedural" }
cerememory-store-emotional = { version = "0.2.6", path = "crates/cerememory-store-emotional" }
cerememory-store-working = { version = "0.2.6", path = "crates/cerememory-store-working" }
cerememory-decay = { version = "0.2.6", path = "crates/cerememory-decay" }
cerememory-association = { version = "0.2.6", path = "crates/cerememory-association" }
cerememory-evolution = { version = "0.2.6", path = "crates/cerememory-evolution" }
cerememory-index = { version = "0.2.6", path = "crates/cerememory-index" }
cerememory-engine = { version = "0.2.6", path = "crates/cerememory-engine" }
cerememory-archive = { version = "0.2.6", path = "crates/cerememory-archive" }
cerememory-config = { version = "0.2.6", path = "crates/cerememory-config" }
cerememory-transport-http = { version = "0.2.6", path = "crates/cerememory-transport-http" }
cerememory-transport-grpc = { version = "0.2.6", path = "crates/cerememory-transport-grpc" }
cerememory-transport-mcp = { version = "0.2.6", path = "crates/cerememory-transport-mcp" }
cerememory-adapter-common = { version = "0.2.6", path = "adapters/adapter-common" }
cerememory-adapter-openai = { version = "0.2.6", path = "adapters/adapter-openai" }
cerememory-adapter-claude = { version = "0.2.6", path = "adapters/adapter-claude" }
cerememory-adapter-gemini = { version = "0.2.6", path = "adapters/adapter-gemini" }
