[package]
name = "cerememory-adapter-openai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cerememory LLM adapter for openai"
rust-version.workspace = true

[dependencies]
cerememory-core = { workspace = true }
cerememory-adapter-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock = { workspace = true }
