[package]
name = "cerememory-python"
version = "0.1.0"
edition = "2021"
description = "Native Python bindings for Cerememory via PyO3"
license = "MIT"

[lib]
name = "cerememory_native"
crate-type = ["cdylib"]

[dependencies]
cerememory-core = { path = "../../crates/cerememory-core" }
cerememory-engine = { path = "../../crates/cerememory-engine" }
pyo3 = { version = "0.28", features = ["extension-module"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }
