[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cerememory-native"
version = "0.1.0"
description = "Native Python bindings for Cerememory (no HTTP needed)"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "cerememory_native"
