[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cerememory-native"
version = "0.2.3"
description = "Native Python bindings for Cerememory (no HTTP needed)"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "CORe Inc.", email = "dev@core-inc.jp" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/co-r-e/cerememory"
Repository = "https://github.com/co-r-e/cerememory"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "cerememory_native"
