[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerememory"
version = "0.1.0"
description = "Python HTTP client SDK for the Cerememory Protocol (CMP)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "CORe Inc.", email = "dev@core-inc.jp" },
]
keywords = ["cerememory", "memory", "ai", "cognitive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/core-inc/cerememory"
Documentation = "https://docs.cerememory.dev/sdk/python"
Repository = "https://github.com/core-inc/cerememory"

[tool.hatch.build.targets.wheel]
packages = ["src/cerememory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
plugins = ["pydantic.mypy"]
