[package]
name = "cerememory-napi"
version = "0.1.0"
edition = "2021"
description = "Native Node.js bindings for Cerememory memory engine"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
cerememory-core = { path = "../../crates/cerememory-core" }
cerememory-engine = { path = "../../crates/cerememory-engine" }
napi = { workspace = true }
napi-derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
