[package]
name = "cerememory-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Cerememory"
rust-version.workspace = true

[[bin]]
name = "cerememory"
path = "src/main.rs"

[dependencies]
cerememory-core = { workspace = true }
cerememory-engine = { workspace = true }
cerememory-archive = { workspace = true }
cerememory-transport-http = { workspace = true, features = [] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
