[package]
name = "cerememory-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Cerememory"
rust-version.workspace = true

[[bin]]
name = "cerememory"
path = "src/main.rs"

[features]
default = ["llm-openai", "llm-claude", "llm-gemini"]
llm-openai = ["dep:cerememory-adapter-openai"]
llm-claude = ["dep:cerememory-adapter-claude"]
llm-gemini = ["dep:cerememory-adapter-gemini"]

[dependencies]
cerememory-core = { workspace = true }
cerememory-config = { workspace = true }
cerememory-engine = { workspace = true }
cerememory-archive = { workspace = true }
cerememory-transport-http = { workspace = true, features = [] }
cerememory-transport-grpc = { workspace = true }
cerememory-transport-mcp = { workspace = true }
cerememory-adapter-openai = { workspace = true, optional = true }
cerememory-adapter-claude = { workspace = true, optional = true }
cerememory-adapter-gemini = { workspace = true, optional = true }
axum = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rpassword = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
