[package]
name = "cerememory-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for Cerememory (TOML + env)"
rust-version.workspace = true

[dependencies]
cerememory-core = { workspace = true }
cerememory-engine = { workspace = true }
figment = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
