[package]
name = "cerememory-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, and CMP protocol definitions for Cerememory"
rust-version.workspace = true

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
criterion = { workspace = true }

[[bench]]
name = "serialization_bench"
harness = false
