[package]
name = "cerememory-store-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for Cerememory redb-backed stores"
rust-version.workspace = true

[dependencies]
cerememory-core = { workspace = true }
redb = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
