[package]
name = "cerememory-store-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for Cerememory redb-backed stores"
rust-version.workspace = true

[dependencies]
argon2 = { workspace = true }
cerememory-core = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
redb = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
