[package]
name = "cerememory-store-emotional"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cerememory emotional store implementation"
rust-version.workspace = true

[dependencies]
cerememory-core = { workspace = true }
cerememory-store-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
redb = { workspace = true }
rmp-serde = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
