[package]
name = "cerememory-transport-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC transport binding for CMP"
rust-version.workspace = true

[dependencies]
cerememory-core = { workspace = true }
cerememory-engine = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
tonic-health = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
