[package]
name = "cerememory-transport-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP/REST transport binding for CMP"
rust-version.workspace = true

[dependencies]
cerememory-core = { workspace = true }
cerememory-engine = { workspace = true }
axum = { workspace = true, features = ["json"] }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tower-http = { workspace = true }
tower = { version = "0.5", features = ["util"] }
governor = { workspace = true }
axum-extra = { version = "0.9", features = ["typed-header"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
