[package]
name = "cerememory-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "phase1"
path = "phase1.rs"

[dependencies]

[dev-dependencies]
cerememory-core = { path = "../../crates/cerememory-core" }
cerememory-engine = { path = "../../crates/cerememory-engine" }
cerememory-transport-http = { path = "../../crates/cerememory-transport-http" }
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
tower = { version = "0.5", features = ["util"] }
axum = { version = "0.7", features = ["json"] }
http-body-util = "0.1"
